# flare-proto

./: .gitignore  Cargo.toml  IM_PROTO_DESIGN.md  README.md  build.rs
proto/: access_gateway.proto  ack.proto  call_signal.proto  communication_core.proto  conversation.proto  data.proto  enums.proto  errors.proto  event.proto  event_bus_envelope.proto  hooks.proto  media.proto  message.proto  message_content.proto  metadata.proto  models.proto  notification.proto  online.proto  push.proto  router.proto  session.proto  signaling.proto  storage.proto  sync.proto  topic_envelope.proto  whitepaper_schema.proto
proto/common/: EXTENSION_GUIDE.md  ack.proto  conversation_models.proto  enums.proto  errors.proto  event.proto  message.proto  message.proto.back  message_content.proto  message_extended.proto  metadata.proto  sync.proto  transport.proto
schemas/: rich_doc_v2.schema.json
src/: lib.rs  message_content_ext.rs  metadata_builder.rs  response.rs
