[package]
name = "flare-proto"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Flare Team"]
license = "MIT"
description = "Flare IM gRPC Protocol Definitions - Shared protocol definitions for both client and server"
repository = "https://github.com/flare-im/flare-im"
homepage = "https://github.com/flare-im/flare-im"
documentation = "https://docs.rs/flare-proto"
readme = "README.md"
exclude = [
    "target/",
    "Cargo.lock",
    "*.md",
    "!README.md",
]

[build-dependencies]
tonic-prost-build = "0.14"

[dependencies]
prost = "0.14"
prost-types = "0.14"
tonic = "0.14"
tonic-prost = "0.14"

[features]
default = []
server = []  # 服务端特性
client = []  # 客户端特性
